# tessdb-tess4c

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
scripts/: fast-apply-sql
src/tess4c/: __init__.py  __main__.py  _version.py  registry.py  utils.py
src/tess4c/templates/: foo.j2  register.sql.j2
